added title in html

--- a/index-vue.html
+++ b/index-vue.html
@@ -13,6 +13,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <h1>DISCHI</h1>
+    </div>
+    
+
     <div id="app">
         <div id="contenitore">
             <ul id="box-disc">
